@@ -1,3 +1,7 @@
+2012-01-24  Frank Warmerdam  <warmerdam@google.com>
+
+	* shpopen.c: fix memory leaks on failure to open .shp file.
+
 2011-12-11  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* shptree.c,h: Use SAHooks for .qix access (gdal #3365)
